--- a/css/juego.css
+++ b/css/juego.css
@@ -1,5 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:900&display=swap');
 body {
-  font-family: Arial, sans-serif;
+  font-family: 'Roboto', sans-serif;
   width: 940px;
   margin: 5% auto;
   min-height: 100%;
